<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="#00000000">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/qq"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:src="@drawable/qq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginTop="34dp"
                android:fontFamily="sans-serif-light"
                android:rotationX="11"
                android:text="@string/QQ_logo_word"
                android:textSize="60sp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/qq_round_corner__input_bg"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:background="@drawable/qq_round_corner__input_bg"
            android:gravity="center"
            android:hint="@string/QQ_logo_username_input_hint"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/qq_round_corner__input_bg"
        android:gravity="center"
        android:hint="@string/QQ_logo_password_input_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="56dp"
        android:paddingRight="56dp">

        <RadioButton
            android:id="@+id/login_radioButton_serviceAgreement"
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/QQ_logo_user_agreement_left" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/QQ_logo_user_agreement_service"
                android:textColor="@color/sky_blue" />

            <TextView
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/QQ_logo_user_agreement_and" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/QQ_logo_user_agreement_privacy"
                android:textColor="@color/sky_blue" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_login"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/qq_login_round_button"
        android:src="@drawable/qq_login_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/login_loginByPhone"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="2dip"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="#E8E8F2" />

        <Button
            android:id="@+id/btn_retrieve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/login_findPassword"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="2dip"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="#E8E8F2" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/login_register"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
